--- a/src/components/organisms/IslandMenu/IslandMenu.scss
+++ b/src/components/organisms/IslandMenu/IslandMenu.scss
@@ -165,10 +165,17 @@
             flex-direction: column;
             justify-content: space-between;
             align-items: center;
-            padding: 0.75rem 0.5rem 0.5rem 0.5rem;
+            padding: 1rem 0.5rem 0.5rem 0.5rem;
+            gap: 0.25rem;
 
             &.island-shop__item--disabled {
                 pointer-events: none;
+                
+                & .island-shop__buy-btn {
+                    background-color: gray;;
+                    color: var(--text);
+                    cursor: not-allowed;
+                }
             }
 
             & img {
@@ -222,10 +229,6 @@
                         height: 1rem;
                     }
                 }
-
-                &:hover {
-                    background-color: var(--purple-light);
-                }
             }
         }
     }
@@ -245,4 +248,12 @@
     background-color: var(--background-base);
     color: var(--error);
     cursor: pointer;
+}
+
+
+.island-menu__backdrop{
+    position: absolute;
+    inset: 0;
+    z-index: -1;
+    pointer-events: all;
 }
